font.html update

--- a/public/font.html
+++ b/public/font.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>Font Finder</title>
 
-    <!-- This 3rd-party stylesheet makes available the font families to be used for this page ("Roboto" and "Roboto Slab"). -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab:100" rel="stylesheet">
+    <!--- Rig Solid Font-->
+    <link rel="stylesheet" href="https://use.typekit.net/uzy6jyr.css">
 
     <!-- This 3rd-party stylesheet incorporates SVG icons from Font Awesome: http://fontawesome.com/ -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" crossorigin="anonymous">
