--- a/public/font.html
+++ b/public/font.html
@@ -3,12 +3,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Font Finder</title>
+    <title>FONT FINDER</title>
 
     <!--- Rig Solid Font-->
     <link rel="stylesheet" href="https://use.typekit.net/uzy6jyr.css">
 
      <!--- Baskerville-->
+    <link rel="stylesheet" href="https://use.typekit.net/uzy6jyr.css">
+
+    <!-- Halyard -->
     <link rel="stylesheet" href="https://use.typekit.net/uzy6jyr.css">
 
 
@@ -25,16 +28,16 @@
     <header>
 
       <div class="header-image-container">
-        <img src="benny.jpg" alt="ff logo">
+        <img src="fflogosmall.png" alt="ff logo">
       </div>
 
-      <h1 class="site-title"><a href="#">Font Finder</a></h1>
+      <h1 class="site-title"><a href="#">FONT FINDER</a></h1>
 
     </header>
 
-    <main class="content">
+     <main class="content">
       <div class="dropdown">
-                <label for="font">please select the name of font you would like to match: </label>
+                <label for="font">Please select the name of font you would like to match: </label>
                 <div class="font">
                     <select id="inputFont" class="dropdown-content" name="filter-city">
                     <option selected value="">Rubik</option>
@@ -49,8 +52,10 @@
                     <option>Old Standard TT</option>
                     </select>
                 </div>
-        </div>
-        
+        <div> 
+    
+
+
 <div class="output">
         <div class="chosen-font">
           <h2>This is a header in your chosen font</h2>
